<resources>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to purple</string>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_clear_playlist">Clear playlist</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_lyrics">Add lyrics</string>
    <string name="add_photo">Add \nphoto</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="add_time_framed_lryics">Add time frame lyrics</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <string name="album_artist">Album artist</string>
    <string name="album_or_artist_empty">The title or artist is empty.</string>
    <string name="albums">Albums</string>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Retro music - Big</string>
    <string name="app_widget_card_name">Retro music - Card</string>
    <string name="app_widget_classic_name">Retro music - Classic</string>
    <string name="app_widget_small_name">Retro music - Small</string>
    <string name="app_widget_text_name">Retro music - Text</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="base_color_theme">Base color theme</string>
    <string name="bass_boost">Bass Boost</string>
    <string name="bio">Bio</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="bug_report_failed">Unable to send report</string>
    <string name="bug_report_failed_invalid_token">Invalid access token. Please contact the app developer.</string>
    <string name="bug_report_failed_issues_not_available">Issues are not enabled for the selected repository. Please contact the app developer.</string>
    <string name="bug_report_failed_unknown">An unexpected error occurred. Please contact the app developer.</string>
    <string name="bug_report_failed_wrong_credentials">Wrong username or password</string>
    <string name="bug_report_issue">Issue</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_no_description">Please enter an issue description</string>
    <string name="bug_report_no_password">Please enter your valid GitHub password</string>
    <string name="bug_report_no_title">Please enter an issue title</string>
    <string name="bug_report_no_username">Please enter your valid GitHub username</string>
    <string name="bug_report_summary">An unexpected error occurred. Sorry you found this bug, if it keeps crashing \"Clear app data\" or send an Email </string>
    <string name="bug_report_uploading">Uploading report to GitHub…</string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="buy_now">Buy now</string>
    <string name="cancel_current_timer">Cancel</string>
    <string name="card">Card</string>
    <string name="card_circular_style">Circular</string>
    <string name="card_color_style">Colored Card</string>
    <string name="card_style">Card</string>
    <string name="carousal">Carousel</string>
    <string name="carousal_effect_on_now_playing_screen">Carousel effect on the now playing screen</string>
    <string name="cascading">Cascading</string>
    <string name="cast">Cast</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Changelog maintained on the Telegram channel</string>
    <string name="circle">Circle</string>
    <string name="circular">Circular</string>
    <string name="classic">Classic</string>
    <string name="clear_action">Clear</string>
    <string name="clear_app_data">Clear app data</string>
    <string name="clear_blacklist">Clear blacklist</string>
    <string name="clear_playing_queue">Clear queue</string>
    <string name="clear_playlist_title">Clear playlist</string>
    <string name="clear_playlist_x"><![CDATA[Clear the playlist <b>%1$s</b>? This can\u2019t be undone!]]></string>
    <string name="close_notification">Close</string>
    <string name="color">Color</string>
    <string name="color_theme_name">Color</string>
    <string name="colors">Colors</string>
    <string name="composer">Composer</string>
    <string name="copied_device_info_to_clipboard">Copied device info to clipboard.</string>
    <string name="could_not_create_playlist">Couldn\u2019t create playlist.</string>
    <string name="could_not_download_album_cover">"Couldn\u2019t download a matching album cover."</string>
    <string name="could_not_restore_purchase">Could not restore purchase.</string>
    <string name="could_not_scan_files">Could not scan %d files.</string>
    <string name="create_action">Create</string>
    <string name="created_playlist_x">Created playlist %1$s.</string>
    <string name="credit_title">Members and contributors </string>
    <string name="currently_listening_to_x_by_x">Currently listening to %1$s by %2$s.</string>
    <string name="dark_theme_name">Kinda Dark</string>
    <string name="default_hint">No Lyrics</string>
    <string name="delete_playlist_title">Delete playlist</string>
    <string name="delete_playlist_x"><![CDATA[Delete the playlist <b>%1$s</b>?]]></string>
    <string name="delete_playlists_title">Delete playlists</string>
    <string name="delete_song_title">Delete song</string>
    <string name="delete_song_x"><![CDATA[Delete the song <b>%1$s</b>?]]></string>
    <string name="delete_songs_title">Delete songs</string>
    <string name="delete_x_playlists"><![CDATA[Delete <b>%1$d</b> playlists?]]></string>
    <string name="delete_x_songs"><![CDATA[Delete <b>%1$d</b> songs?]]></string>
    <string name="deleted_x_songs">Deleted %1$d songs.</string>
    <string name="deleting_songs">Deleting songs</string>
    <string name="depth">Depth</string>
    <string name="description">Description</string>
    <string name="device_info">Device info</string>
    <string name="dialog_message_set_ringtone">Allow Retro Music to modify audio settings</string>
    <string name="dialog_title_set_ringtone">Set ringtone</string>
    <string name="do_you_want_to_clear_the_blacklist">Do you want to clear the blacklist?</string>
    <string name="do_you_want_to_remove_from_the_blacklist"><![CDATA[Do you want to remove <b>%1$s</b> from the blacklist?]]></string>
    <string name="donate">Donate</string>
    <string name="donate_summary">If you think I deserve to get paid for my work, you can leave some money here</string>
    <string name="donation_header">Buy me a:</string>
    <string name="download_from_last_fm">Download from Last.fm</string>
    <string name="drive_mode">Drive mode</string>
    <string name="edit">Edit</string>
    <string name="edit_cover">Edit cover</string>
    <string name="empty">Empty</string>
    <string name="equalizer">Equalizer</string>
    <string name="error">Error</string>
    <string name="faq">FAQ</string>
    <string name="favorites">Favorites</string>
    <string name="finish_last_song">Finish last song</string>
    <string name="fit">Fit</string>
    <string name="flat">Flat</string>
    <string name="folders">Folders</string>
    <string name="follow_system">Follow system</string>
    <string name="for_you">For you</string>
    <string name="free">Free</string>
    <string name="full">Full</string>
    <string name="full_card">Full card</string>
    <string name="general_settings_summary">Change the theme and colors of the app</string>
    <string name="general_settings_title">Look and feel</string>
    <string name="genre">Genre</string>
    <string name="genres">Genres</string>
    <string name="git_hub_summary">Fork the project on GitHub</string>
    <string name="double_gems">Got %d More Gems</string>
    <string name="got_gems">Wow！Got %d Gems</string>
    <string name="get_cash">You get CASH!</string>
    <string name="your_balance">Your balance</string>
    <string name="balance">Balance</string>
    <string name="cashout">Cashout</string>
    <string name="cashout_threshold">$%d Cashout</string>
    <string name="cashout_warning">You\'re only $%.2f from cashing out! Keep going!</string>
    <string name="got_it">Got it</string>
    <string name="cashout_tips">Please input your PayPal account to receive the money.</string>
    <string name="proceed_tips">Your request will be proceed in 7 business days.</string>
    <string name="example_email">example@example.com</string>
</resources>