<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/globe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b3000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/round_white_radius_15"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="264dp"
            android:layout_height="0dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/pic_cash_paypal"
            app:layout_constraintDimensionRatio="h,7:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="26dp"
            android:text="@string/cashout_tips"
            android:textColor="@color/eighty_seven_percent_black_overlay"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:hint="@string/example_email"
            android:background="@drawable/round_border_gray_radius_30"
            android:gravity="center"
            android:textColor="@color/eighty_seven_percent_black_overlay"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_tips"
            app:layout_constraintStart_toStartOf="@+id/tv_tips"
            app:layout_constraintTop_toBottomOf="@+id/tv_tips" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_blue_radius_30"
            android:gravity="center"
            android:text="@string/got_it"
            android:textColor="@color/eighty_seven_percent_white_overlay"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/editText"
            app:layout_constraintTop_toBottomOf="@id/editText" />

        <TextView
            android:id="@+id/tv_proceed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/proceed_tips"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_confirm"
            app:layout_constraintStart_toStartOf="@+id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@+id/btn_confirm" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_proceed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>