<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/globe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/md_white_1000"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="16dp"
            android:src="@drawable/nav_icon_close_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_cash_label"
            android:layout_width="178dp"
            android:layout_height="0dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/pic_cash_paypal"
            app:layout_constraintDimensionRatio="h,7:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_close" />

        <TextView
            android:id="@+id/tv_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/color_green"
            android:textSize="36dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/iv_cash_label"
            app:layout_constraintStart_toStartOf="@+id/iv_cash_label"
            app:layout_constraintTop_toBottomOf="@+id/iv_cash_label"
            tools:text="+$1.05" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:maxHeight="10dp"
            android:minHeight="10dp"
            android:progressDrawable="@drawable/drawable_progress_cash"
            android:splitTrack="false"
            android:thumb="@drawable/drawable_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_balance" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/your_balance"
            android:textAllCaps="true"
            android:textColor="@color/thirty_percent_black_overlay"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_cash"
            app:layout_constraintStart_toStartOf="@+id/tv_cash"
            app:layout_constraintTop_toBottomOf="@+id/tv_cash" />

        <TextView
            android:id="@+id/tv_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/balance"
            android:textColor="@color/color_green"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/seek_bar"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

        <TextView
            android:id="@+id/tv_cashout_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/thirty_percent_black_overlay"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/seek_bar"
            app:layout_constraintTop_toTopOf="@+id/tv_balance_label"
            tools:text="@string/cashout_threshold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="222dp"
            android:layout_height="0dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/pic_balance"
            app:layout_constraintDimensionRatio="h,4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_balance_label" />

        <TextView
            android:id="@+id/btn_cashout"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_orange_radius_15"
            android:gravity="center"
            android:text="@string/cashout"
            android:textColor="@color/eighty_seven_percent_white_overlay"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/btn_cashout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>